--- a/.github/workflows/container.yml
+++ b/.github/workflows/container.yml
@@ -18,6 +18,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
+      - run: node --version
+      - run: npm --version
       - run: npm install
       - run: npm run build
         env:
